--- a/package.json
+++ b/package.json
@@ -5,21 +5,25 @@
   "main": "index.js",
   "scripts": {
     "start": "npx ts-node src/index.ts",
+    "collect": "NODE_ENV=production node --stack_size=4096 --max-old-space-size=4096 -r ts-node/register/transpile-only -r tsconfig-paths/register src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "project-88288",
   "license": "ISC",
   "dependencies": {
-    "@types/lodash": "^4.14.195",
+    "@terra-money/feather.js": "^1.0.5",
+    "axios": "^1.4.0",
     "bluebird": "^3.7.2",
     "date-fns-timezone": "^0.1.4",
     "dotenv": "^16.1.3",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.0",
     "koa-router": "^12.0.0",
-    "lodash": "^4.17.21",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
