--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,24 @@
 {
   "compilerOptions": {
+    "target": "ES2022",
+    "module": "commonjs",
+    "outDir": "dist",
+    "rootDir": "src",
+    "strict": true,
+    "esModuleInterop": true,
+  }
+}
+
+/*
+{
+  "compilerOptions": {
     "target": "es2018",
     "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
   }
 }
+
+*/
