--- a/package.json
+++ b/package.json
@@ -12,23 +12,27 @@
   "author": "project-88288",
   "license": "ISC",
   "dependencies": {
+    "@azure/storage-blob": "^12.14.0",
     "@terra-money/feather.js": "^1.0.5",
     "axios": "^1.4.0",
     "bluebird": "^3.7.2",
     "date-fns-timezone": "^0.1.4",
     "dotenv": "^16.1.3",
+    "fs-extra": "^11.1.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.0",
     "koa-router": "^12.0.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
+    "typedi": "^0.10.0",
+    "typeorm": "^0.3.16",
+    "typeorm-typedi-extensions": "^0.4.1",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.38",
     "@types/koa-bodyparser": "^4.3.10",
-    "@types/koa-router": "^7.4.4"
+    "@types/koa-router": "^7.4.4",
+    "@types/lodash": "^4.14.195"
   }
 }
