--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure/storage-blob": "^12.14.0",
     "@terra-money/feather.js": "^1.0.5",
+    "@types/fs-extra": "^11.0.1",
     "axios": "^1.4.0",
     "bluebird": "^3.7.2",
     "date-fns-timezone": "^0.1.4",
