--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/fs-extra": "^11.0.1",
     "axios": "^1.4.0",
     "bluebird": "^3.7.2",
+    "cron": "^2.3.1",
     "date-fns-timezone": "^0.1.4",
     "dotenv": "^16.1.3",
     "fs-extra": "^11.1.1",
@@ -23,6 +24,7 @@
     "koa-bodyparser": "^4.4.0",
     "koa-router": "^12.0.0",
     "lodash": "^4.17.21",
+    "os": "^0.1.2",
     "pg": "^8.11.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.38",
+    "@types/cron": "^2.0.1",
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-router": "^7.4.4",
     "@types/lodash": "^4.14.195"
