--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
     "koa-router": "^12.0.0",
     "lodash": "^4.17.21",
     "pg": "^8.11.0",
-    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typedi": "^0.10.0",
     "typeorm": "^0.2.34",
-    "typeorm-typedi-extensions": "^0.4.1",
-    "typescript": "^5.0.4"
+    "typeorm-typedi-extensions": "^0.4.1"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.38",
     "@types/cron": "^2.0.1",
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-router": "^7.4.4",
-    "@types/lodash": "^4.14.195"
+    "@types/lodash": "^4.14.195",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   }
 }
