--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node --stack_size=4096 --max-old-space-size=4096 -r  ts-node/register/transpile-only -r tsconfig-paths/register src/index.ts",
+    "resetblock": "ts-node src/postgres/resetblock.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,6 +26,7 @@
     "koa-router": "^12.0.0",
     "lodash": "^4.17.21",
     "pg": "^8.11.0",
+    "pg-promise": "^11.5.0",
     "tsconfig-paths": "^4.2.0",
     "typedi": "^0.10.0",
     "typeorm": "^0.2.34",
