--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ POSTGRES_USER= dev
 POSTGRES_PASSWORD = dev
 POSTGRES_DB = workermainnet
 SERVER_PORT = 5432
-AZ_CONTAINER = test
+AZ_CONTAINER = opworker
